--- a/HulluKyla/Pages/VarausListaPage.xaml
+++ b/HulluKyla/Pages/VarausListaPage.xaml
@@ -32,7 +32,7 @@
                         <DataTemplate>
                             <Frame Padding="10"
                                    Margin="0,5"
-                                   BackgroundColor="Gray"
+                                   BackgroundColor="Transparent"
                                    CornerRadius="10">
                                     <VerticalStackLayout>
                                         <Label Text="{Binding KokoNimi}"
@@ -118,7 +118,7 @@
                                 <DataTemplate>
                                     <Frame Padding="10"
                                             Margin="0,5"
-                                            BackgroundColor="Gray"
+                                            BackgroundColor="Transparent"
                                             CornerRadius="10">
                                         <VerticalStackLayout>
                                             <Label Text="{Binding Palvelu.Nimi, StringFormat='Palvelun nimi: {0}'}"
@@ -155,7 +155,7 @@
                                 <DataTemplate>
                                     <Frame Padding="10"
                                            Margin="0,5"
-                                           BackgroundColor="Gray"
+                                           BackgroundColor="Transparent"
                                            CornerRadius="10">
                                         <VerticalStackLayout>
                                             <Label Text="{Binding Nimi }"
