--- a/HulluKyla/Pages/UusiAsiakasPage.xaml
+++ b/HulluKyla/Pages/UusiAsiakasPage.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:HulluKyla.Models.Controls"
              x:Class="HulluKyla.Pages.UusiAsiakasPage"
              Title="UusiAsiakasPage">
 
@@ -29,17 +30,20 @@
                      HorizontalOptions="Start"
                      VerticalOptions="End"
                      Margin="0,20,0,0">
-            <Button Text="Etusivu"
+            <controls:ThreeDButton 
+                    Text="Etusivu"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="Etusivu" />
 
-            <Button Text="Takaisin Asiakaslistaan"
+            <controls:ThreeDButton 
+                    Text="Takaisin Asiakaslistaan"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="AsiakasListaPage" />
         </StackLayout>
 
         <!-- Oikean reunan tallenna-nappi -->
-        <Button Grid.Row="1" Grid.Column="1"
+        <controls:ThreeDButton 
+                Grid.Row="1" Grid.Column="1"
                 Text="Tallenna"
                 Clicked="Tallenna_Clicked"
                 HorizontalOptions="End"
