--- a/HulluKyla/Pages/VarausListaPage.xaml
+++ b/HulluKyla/Pages/VarausListaPage.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:HulluKyla.Models.Controls"
              x:Class="HulluKyla.Pages.VarausListaPage"
              Title="VarausListaPage">
 
@@ -177,11 +178,13 @@
                          Grid.Column="0"
                          Orientation="Horizontal"
                          HorizontalOptions="Center">
-                    <Button Text="Poista varaus" Margin="5"
+                    <controls:ThreeDButton 
+                            Text="Poista varaus" Margin="5"
                             Clicked="PoistaVaraus_Clicked"/>
             </StackLayout>
 
-            <Button Grid.Row="1"
+            <controls:ThreeDButton 
+                    Grid.Row="1"
                     Grid.Column="1"
                     Clicked="PoistaPalvelu_Clicked"
                     Text="Poista palvelu varauksesta"
@@ -198,7 +201,7 @@
                            Placeholder="Kappalemäärä">
                         
                     </Entry>
-                    <Button 
+                    <controls:ThreeDButton 
                             Clicked="LisaaPalvelu_Clicked"
                             Text="Lisää palvelu varaukseen"
                             HorizontalOptions="Center"
@@ -215,7 +218,8 @@
                      HorizontalOptions="Start"
                      VerticalOptions="End"
                      Margin="10,0,0,5">
-            <Button Text="Etusivu"
+            <controls:ThreeDButton 
+                    Text="Etusivu"
                     Margin="5"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="Etusivu" />
@@ -227,7 +231,8 @@
                      HorizontalOptions="End"
                      VerticalOptions="End"
                      Margin="0,0,10,5">
-            <Button Text="Uusi varaus"
+            <controls:ThreeDButton 
+                    Text="Uusi varaus"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="UusiVarausPage" />
         </StackLayout>
