--- a/HulluKyla/Pages/AlueListaPage.xaml
+++ b/HulluKyla/Pages/AlueListaPage.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:HulluKyla.Models.Controls"
              x:Class="HulluKyla.Pages.AlueListaPage"
              Title="AlueListaPage">
 
@@ -30,8 +31,8 @@
         <!-- Välibuttonit -->
         
         <VerticalStackLayout Spacing="10" Grid.Column="1" Grid.Row="0" VerticalOptions="Center" HorizontalOptions="Center">
-            <Button Text="Tallenna alue" Clicked="TallennaClicked" HeightRequest="50" />
-            <Button Text="Poista alue" Clicked="PoistaClicked" HeightRequest="50" />
+            <controls:ThreeDButton Text="Tallenna alue" Clicked="TallennaClicked" HeightRequest="50" />
+            <controls:ThreeDButton Text="Poista alue" Clicked="PoistaClicked" HeightRequest="50" />
         </VerticalStackLayout>
 
         <!-- Entryt -->
@@ -48,11 +49,13 @@
                      VerticalOptions="End"
                      Margin="0,20,0,0">
 
-            <Button Text="Etusivu"
+            <controls:ThreeDButton 
+                    Text="Etusivu"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="Etusivu" />
 
-            <Button Text="Takaisin"
+            <controls:ThreeDButton 
+                    Text="Takaisin"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="HallintaPage" />
         </StackLayout>
@@ -65,7 +68,8 @@
                      VerticalOptions="End"
                      Margin="0,20,0,0">
 
-            <Button Text="Uusi alue"
+            <controls:ThreeDButton 
+                    Text="Uusi alue"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="UusiAluePage" />
         </StackLayout>
