--- a/HulluKyla/Pages/AsiakasListaPage.xaml
+++ b/HulluKyla/Pages/AsiakasListaPage.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:HulluKyla.Models.Controls"
              x:Class="HulluKyla.Pages.AsiakasListaPage"
              Title="AsiakasListaPage">
 
@@ -35,8 +36,8 @@
             <Entry x:Name="PostinroEntry" Placeholder="Postinumero..." />
             <Entry x:Name="EmailEntry" Placeholder="Sähköposti..." />
             <Entry x:Name="PuhelinnroEntry" Placeholder="Puhelinnumero..." />
-            <Button Text="Tallenna asiakas" Clicked="TallennaClicked" HeightRequest="50" />
-            <Button Text="Poista asiakas" Clicked="PoistaClicked" HeightRequest="50" />
+            <controls:ThreeDButton Text="Tallenna asiakas" Clicked="TallennaClicked" HeightRequest="50" />
+            <controls:ThreeDButton Text="Poista asiakas" Clicked="PoistaClicked" HeightRequest="50" />
         </VerticalStackLayout>
 
         <!-- Vasemman alakulman napit -->
@@ -46,10 +47,12 @@
                      HorizontalOptions="Start"
                      VerticalOptions="End"
                      Margin="0,20,0,0">
-            <Button Text="Etusivu"
+            <controls:ThreeDButton 
+                    Text="Etusivu"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="Etusivu" />
-            <Button Text="Takaisin"
+            <controls:ThreeDButton 
+                    Text="Takaisin"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="HallintaPage" />
         </StackLayout>
@@ -61,7 +64,8 @@
                      HorizontalOptions="End"
                      VerticalOptions="End"
                      Margin="0,20,0,0">
-            <Button Text="Uusi asiakas"
+            <controls:ThreeDButton 
+                    Text="Uusi asiakas"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="UusiAsiakasPage" />
         </StackLayout>
