--- a/HulluKyla/Pages/HakutyokaluPage.xaml
+++ b/HulluKyla/Pages/HakutyokaluPage.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:HulluKyla.Models.Controls"
              x:Class="HulluKyla.Pages.HakutyokaluPage"
              Title="HakutyokaluPage">
 
@@ -46,11 +47,13 @@
                      HorizontalOptions="Start"
                      Margin="0,20,0,0">
 
-            <Button Text="Etusivu"
+            <controls:ThreeDButton 
+                    Text="Etusivu"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="Etusivu" />
 
-            <Button Text="Takaisin"
+            <controls:ThreeDButton 
+                    Text="Takaisin"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="RaportointiPage" />
 
