--- a/HulluKyla/Pages/HallintaPage.xaml
+++ b/HulluKyla/Pages/HallintaPage.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:HulluKyla.Models.Controls"
              x:Class="HulluKyla.Pages.HallintaPage"
              Title="HallintaPage">
 
@@ -14,22 +15,26 @@
                              VerticalOptions="Center"
                              HorizontalOptions="Center">
 
-            <Button Text="AsiakasLista"
+            <controls:ThreeDButton 
+                    Text="AsiakasLista"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="AsiakasListaPage"
                     WidthRequest="200"/>
 
-            <Button Text="AlueLista"
+            <controls:ThreeDButton 
+                    Text="AlueLista"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="AlueListaPage"
                     WidthRequest="200"/>
 
-            <Button Text="MokkiLista"
+            <controls:ThreeDButton 
+                    Text="MokkiLista"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="MokkiListaPage"
                     WidthRequest="200"/>
 
-            <Button Text="PalveluLista"
+            <controls:ThreeDButton 
+                    Text="PalveluLista"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="PalveluListaPage"
                     WidthRequest="200"/>
@@ -37,7 +42,8 @@
         </VerticalStackLayout>
 
         <!-- Etusivu nappi - Standardi vasenkulma? -->
-        <Button Grid.Row="1" Grid.Column="0"
+        <controls:ThreeDButton 
+                Grid.Row="1" Grid.Column="0"
                 Text="Etusivu"
                 Clicked="Navigoi_Clicked"
                 CommandParameter="Etusivu"
