--- a/HulluKyla/Pages/RaportointiPage.xaml
+++ b/HulluKyla/Pages/RaportointiPage.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:HulluKyla.Models.Controls"
              x:Class="HulluKyla.Pages.RaportointiPage"
              Title="RaportointiPage">
 
@@ -24,7 +25,7 @@
                     <DatePicker x:Name="LoppuPvmPicker" />
                 </HorizontalStackLayout>
 
-                <Button Text="Laske mökkien ja palveluiden tuotto" Clicked="LaskeTuottoClicked" />
+                <controls:ThreeDButton Text="Laske mökkien ja palveluiden tuotto" Clicked="LaskeTuottoClicked" />
 
                 <Label x:Name="MokkienTuottoLabel" Text="Mökkien tuotto: " FontSize="Medium" FontAttributes="Bold" />
                 <Label x:Name="PalveluidenTuottoLabel" Text="Palveluiden tuotto: " FontSize="Medium" FontAttributes="Bold" />
@@ -70,7 +71,8 @@
         </Frame>
 
         <!-- Etusivu-nappi -->
-        <Button Grid.Row="2" Grid.Column="0"
+        <controls:ThreeDButton
+                Grid.Row="2" Grid.Column="0"
                 Text="Takaisin"
                 Clicked="Navigoi_Clicked"
                 CommandParameter="Etusivu"
@@ -79,7 +81,8 @@
                 Margin="0,20,0,0" />
 
         <!-- Hakutyökalu-nappi -->
-        <Button Grid.Row="2" Grid.Column="1"
+        <controls:ThreeDButton 
+                Grid.Row="2" Grid.Column="1"
                 Text="Hakutyökalu"
                 Clicked="Navigoi_Clicked"
                 CommandParameter="HakutyokaluPage"
