--- a/HulluKyla/Pages/UusiPalveluPage.xaml
+++ b/HulluKyla/Pages/UusiPalveluPage.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:controls="clr-namespace:HulluKyla.Models.Controls"
              x:Class="HulluKyla.Pages.UusiPalveluPage"
              Title="UusiPalveluPage">
 
@@ -31,11 +32,13 @@
                      VerticalOptions="End"
                      Margin="0,20,0,0">
 
-            <Button Text="Etusivu"
+            <controls:ThreeDButton 
+                    Text="Etusivu"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="Etusivu" />
 
-            <Button Text="Takaisin palveluihin"
+            <controls:ThreeDButton 
+                    Text="Takaisin palveluihin"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="PalveluListaPage" />
 
@@ -43,7 +46,8 @@
         </StackLayout>
 
         <!-- Lisää-nappi oikeaan alakulmaan -->
-        <Button Grid.Row="1" Grid.Column="2"
+        <controls:ThreeDButton 
+                Grid.Row="1" Grid.Column="2"
                 Text="Lisää"
                 Clicked="LisaaClicked"
                 HorizontalOptions="End"
