--- a/HulluKyla/Pages/SeurantaPage.xaml
+++ b/HulluKyla/Pages/SeurantaPage.xaml
@@ -83,28 +83,41 @@
             </Frame>
 
             <!-- Napit -->
-            <HorizontalStackLayout HorizontalOptions="FillAndExpand" Spacing="10">
+            <Grid ColumnDefinitions="*,*" Padding="10">
                 <!-- Etusivu-nappi -->
-                <controls:ThreeDButton 
-                    Text="Etusivu"
-                    Clicked="Navigoi_Clicked"
-                    CommandParameter="Etusivu"
-                    HorizontalOptions="Start"
-                    BackgroundColor="LightGray"
-                    CornerRadius="20"
-                    WidthRequest="100"/>
+                    <controls:ThreeDButton 
+                        Text="Etusivu"
+                        Clicked="Navigoi_Clicked"
+                        CommandParameter="Etusivu"
+                        HorizontalOptions="Start"
+                        BackgroundColor="LightGray"
+                        CornerRadius="20"
+                        WidthRequest="100"/>
+                
+                <HorizontalStackLayout HorizontalOptions="End" Spacing="10" Grid.Column="1">
+                        <!-- Tulosta-nappi -->
+                    <controls:ThreeDButton 
+                        Text="Tulosta"
+                        Clicked="TulostaLasku_Clicked"
+                        x:Name="TulostaButton"
+                        BackgroundColor="DarkGray"
+                        TextColor="White"
+                        CornerRadius="20"
+                        WidthRequest="100"
+                        HorizontalOptions="Center"/>
 
-                <!-- Tulosta-nappi -->
-                <controls:ThreeDButton 
-                    Text="Tulosta"
-                    Clicked="TulostaLasku_Clicked"
-                    x:Name="TulostaButton"
-                    BackgroundColor="DarkGray"
-                    TextColor="White"
-                    CornerRadius="20"
-                    WidthRequest="100"
-                    HorizontalOptions="End"/>
-            </HorizontalStackLayout>
+                    <!-- Merkitse maksetuksi-nappi -->
+                    <controls:ThreeDButton 
+                        Text="Merkiste maksetuksi"
+                        Clicked="MerkitseMaksetuksi_Clicked"
+                        x:Name="MerkitseMaksetuksiButton"
+                        BackgroundColor="DarkGray"
+                        TextColor="White"
+                        CornerRadius="20"
+                        WidthRequest="180"
+                        HorizontalOptions="End"/>
+                </HorizontalStackLayout>
+            </Grid>
         </VerticalStackLayout>
     </ScrollView>
 
